Fix layout issue

--- a/dashboard/src/app/pages/dashboard/dashboard.component.scss
+++ b/dashboard/src/app/pages/dashboard/dashboard.component.scss
@@ -37,6 +37,10 @@ mat-card {
       grid-column-start: 5;
       grid-column-end: 7;
 
+      mat-form-field {
+        width: 100%;
+      }
+
       mat-expansion-panel {
         margin-bottom: 10px;
 
